--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "npm": "^5.7.1",
     "vue": "^2.5.3",
     "vuelidate": "^0.6.1",
     "vuetify": "^0.17.4",
