--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "npm": "^5.7.1",
+    "file-saver": "^1.3.4",
+    "npm": "^5.6.0",
     "vue": "^2.5.3",
     "vuelidate": "^0.6.1",
     "vuetify": "^0.17.4",
