--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "file-saver": "^1.3.4",
     "npm": "^5.6.0",
     "vue": "^2.5.3",
+    "vue-markdown": "^2.2.4",
     "vuelidate": "^0.6.1",
     "vuetify": "^0.17.4",
     "vuex": "^3.0.1"
